--- a/app/views/book/admin_menu.erb
+++ b/app/views/book/admin_menu.erb
@@ -3,6 +3,7 @@
   function change(reservation_id){
         
         var button="button" + reservation_id;
+        var button1="button1" + reservation_id;
         var view_state="view_state" + reservation_id;
         var re_state=document.getElementById(view_state).innerHTML;
         
@@ -19,8 +20,11 @@
               // alert("db 저장 완료");
               document.getElementById(view_state).innerHTML="승인완료";
               document.getElementById(button).innerHTML="승인취소";
+              document.getElementById(button1).innerHTML="승인취소";
+              
               document.getElementById(view_state).className="label label-primary";
-              document.getElementById(button).className="btn btn-danger btn-sm";
+              document.getElementById(button).className="btn btn-danger btn-primary";
+              document.getElementById(button1).className="btn btn-danger btn-primary";
               
               $("#wait_table").load(window.location + " #wait_table");
               // $("#total_table").load(window.location + " #total_table");
@@ -50,26 +54,17 @@
               // alert("db 저장 완료");
               document.getElementById(view_state).innerHTML="승인대기";
               document.getElementById(button).innerHTML="승인하기";
+              document.getElementById(button1).innerHTML="승인하기";
+              
               document.getElementById(view_state).className="label label-info";
-              document.getElementById(button).className="btn btn-success btn-sm";
+              document.getElementById(button).className="btn btn-success btn-primary";
+              document.getElementById(button1).className="btn btn-success btn-primary";
               
               $("#wait_table").load(window.location + " #wait_table");
               // $("#total_table").load(window.location + " #total_table");
               $("#ok_table").load(window.location + " #ok_table");
               $("#over6_table").load(window.location + " #over6_table");
-              // $("#wait_table").load(window.location + " #wait_table");
-              // $("#total_table").load(window.location + " #total_table");
-              // $("#ok_table").load(window.location + " #ok_table");
-              // $("#over6_table").load(window.location + " #over6_table");
-              // (document.getElementById("total_table")).load();
-              // (document.getElementById("wait_table")).load();
-              // (document.getElementById("ok_table")).load();
-              // (document.getElementById("over6_table")).load();
               
-              // document.getElementById("total_table").load();
-              // document.getElementById("wait_table").load();
-              // document.getElementById("ok_table").load();
-              // document.getElementById("over6_table").load();
             },
             error:function(request,status,error){
             alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
@@ -123,13 +118,13 @@
                   <% if c.state=="승인대기" %>
                     <!--<input onclick="change(<=c.id%>)" type="button" value="승인하기" id="button<=c.id%>"></input>-->
                     <td><span class="label label-info" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span> </td>
-                    <td><button type="button" class="btn btn-success btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
+                    <td><button type="button" class="btn btn-success btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
                     
                     
                   <% else %>
                     <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
                     <td><span class="label label-primary" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span></td>
-                    <td><button type="button" class="btn btn-danger btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
+                    <td><button type="button" class="btn btn-danger btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
                   <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
                     
                   <%end%>
@@ -141,16 +136,21 @@
 
             <!--</td>-->
                
-            <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
+            </td>
+               
+            <td><button class="btn btn-primary" data-toggle="modal" data-target="#show<%=c.id%>"
+            style="text-align: center; font-size: 16px;" id="menu_font">상세보기</button></td>
             
             <td>
             <% if current_user %>
                <% if User.find(c.user).email == current_user.email %>
-                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button>
-               
+                <button class="btn btn-danger btn-primary" data-toggle="modal" data-target="#show_check<%=c.id%>" 
+                style="text-align: center; font-size: 16px;" id="menu_font">예약취소</button>
+           
                <%end%>
             
             <% end %>
+            
             </td>
           </tr>
 
@@ -191,13 +191,13 @@
                   <% if c.state=="승인대기" %>
                     <!--<input onclick="change(<=c.id%>)" type="button" value="승인하기" id="button<=c.id%>"></input>-->
                     <td><span class="label label-info" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span> </td>
-                    <td><button type="button" class="btn btn-success btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
+                    <td><button type="button" class="btn btn-success btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
                     
                     
                   <% else %>
                     <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
                     <td><span class="label label-primary" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span></td>
-                    <td><button type="button" class="btn btn-danger btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
+                    <td><button type="button" class="btn btn-danger btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
                   <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
                     
                   <%end%>
@@ -209,16 +209,22 @@
 
             <!--</td>-->
                
-            <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
+            </td>
+               
+            <td><button class="btn btn-primary" data-toggle="modal" data-target="#show<%=c.id%>"
+            style="text-align: center; font-size: 16px;" id="menu_font">상세보기</button></td>
             
             <td>
             <% if current_user %>
                <% if User.find(c.user).email == current_user.email %>
-                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button>
-               
+                <button class="btn btn-danger btn-primary" data-toggle="modal" data-target="#show_check<%=c.id%>" 
+                style="text-align: center; font-size: 16px;" id="menu_font">예약취소</button>
+           
                <%end%>
             
             <% end %>
+            
+            </td>
             </td>
           </tr>
 
@@ -261,13 +267,13 @@
                       <% if c.state=="승인대기" %>
                         <!--<input onclick="change(<=c.id%>)" type="button" value="승인하기" id="button<=c.id%>"></input>-->
                         <td><span class="label label-info" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span> </td>
-                        <td><button type="button" class="btn btn-success btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
+                        <td><button type="button" class="btn btn-success btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
                         
                         
                       <% else %>
                         <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
                         <td><span class="label label-primary" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span></td>
-                        <td><button type="button" class="btn btn-danger btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
+                        <td><button type="button" class="btn btn-danger btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
                       <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
                         
 
@@ -278,16 +284,20 @@
     
                 </td>
                    
-                <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
+                <td><button class="btn btn-primary" data-toggle="modal" data-target="#show<%=c.id%>"
+                style="text-align: center; font-size: 16px;" id="menu_font">상세보기</button></td>
+                
                 <td>
-                  <% if current_user %>
-                     <% if User.find(c.user).email == current_user.email %>
-                      <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button>
-                     
-                     <%end%>
-                  
-                  <% end %>
-            </td> 
+                <% if current_user %>
+                  <% if User.find(c.user).email == current_user.email %>
+                    <button class="btn btn-danger btn-primary" data-toggle="modal" data-target="#show_check<%=c.id%>" 
+                    style="text-align: center; font-size: 16px;" id="menu_font">예약취소</button>
+               
+                  <%end%>
+            
+                <% end %>
+            
+                </td> 
                
             </tr>
     
@@ -329,13 +339,13 @@
                   <% if c.state=="승인대기" %>
                     <!--<input onclick="change(<=c.id%>)" type="button" value="승인하기" id="button<=c.id%>"></input>-->
                     <td><span class="label label-info" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span> </td>
-                    <td><button type="button" class="btn btn-success btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
+                    <td><button type="button" class="btn btn-success btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
                     
                     
                   <% else %>
                     <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
                     <td><span class="label label-primary" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span></td>
-                    <td><button type="button" class="btn btn-danger btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
+                    <td><button type="button" class="btn btn-danger btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
                   <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
                     
                   <%end%>
@@ -343,17 +353,21 @@
                 <% end %>
               <%end%>
 
+            </td>
+               
+            <td><button class="btn btn-primary" data-toggle="modal" data-target="#show<%=c.id%>"
+            style="text-align: center; font-size: 16px;" id="menu_font">상세보기</button></td>
+            
             <td>
-              
-            <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
             <% if current_user %>
                <% if User.find(c.user).email == current_user.email %>
-            <td>
-                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button>
-                 
+                <button class="btn btn-danger btn-primary" data-toggle="modal" data-target="#show_check<%=c.id%>" 
+                style="text-align: center; font-size: 16px;" id="menu_font">예약취소</button>
+           
                <%end%>
             
             <% end %>
+            
             </td>
           </tr>
 
@@ -409,13 +423,27 @@
         
         <div class="form-group">
           <label for="recipient-name" class="control-label">사용자</label>
-          <%=User.find(c.user).student_name%> (<%=User.find(c.user).student_number%>)
+          <%=User.find(c.user).student_name %> (<%=User.find(c.user).student_number %>)
         </div>
         
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">담당 교수</label>
+          <%=c.professor%>            
+        </div>
+        
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">강의실</label>
+          <%=Room.find(c.room_id).building_name %> <%=Room.find(c.room_id).room_number%>호
+        </div>
+        
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">사용날짜</label>
+          <%=c.date%>
+        </div>
         
         <div class="form-group">
           <label for="recipient-name" class="control-label">사용시간</label>
-          <%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%>
+          <%=c.start_time.utc.to_s(:time)%> ~ <%=c.finish_time.utc.to_s(:time)%>
         </div>
         
         <div class="form-group">
@@ -423,23 +451,20 @@
           <%=c.purpose%>
         </div>
         
-        <div class="form-group">
-          <label for="recipient-name" class="control-label">담당 교수</label>
-          <%=c.professor%>            
-        </div>
+        
       </div>
       
       
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <% if current_user.email == "admin@ptu.ac.kr" %>
-        <button type="button" class="btn btn-primary" id = "ok" >승인하기</button>
-      <% end %>  
-
+      
+        <button type="button" class="btn btn-success btn-primary" id="button1<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button>
+      
       </div>
     </div>
   </div>
 </div>
+
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <%end%>
 
