--- a/app/views/book/booking.erb
+++ b/app/views/book/booking.erb
@@ -1,7 +1,29 @@
+<script type="text/javascript">
+function GetClock(){
+var d=new Date();
+var nhour=d.getHours(),nmin=d.getMinutes(),nsec=d.getSeconds(),ap;
+
+if(nhour==0){ap=" AM";nhour=12;}
+else if(nhour<12){ap=" AM";}
+else if(nhour==12){ap=" PM";}
+else if(nhour>12){ap=" PM";nhour-=12;}
+
+if(nmin<=9) nmin="0"+nmin;
+if(nsec<=9) nsec="0"+nsec;
+
+document.getElementById('clockbox').innerHTML=""+nhour+":"+nmin+":"+nsec+ap+"";
+}
+
+window.onload=function(){
+GetClock();
+setInterval(GetClock,1000);
+}
+</script> 
 
 
 <div class="well" id="menu_font" style="font-size: 20px;" >
-   <center>현재시간 : <%=Time.zone.now.to_s(:default)%><br>
+  
+   <center>현재시간 :     <br><%=Time.zone.today%> <p id="clockbox"></p><br>
   '<%=@class.room_number%>호' 대여 신청서를 작성해주세요.</center>
 </div>
 <br>
@@ -24,7 +46,13 @@
       <div class="form-group">
        <label for="inputprofessor" class="col-lg-2 control-label" style="font-size: 20px;" id="menu_font">지도 교수</label>
         <div class="col-lg-10">
-          <input type="text" class="form-control" name="professor" style="font-size: 20px;" id="menu_font_t" required>
+          <!--학과 선택시 교수가 보임 자바스크립트-->
+          <!--<input type="text" class="form-control" name="professor" style="font-size: 20px;" id="menu_font_t" required>-->
+          <select name="professor">
+            <% @professor.each do |r|%>
+            <option value="volvo"><%=r%></option>
+            <%end%>
+          </select>
         </div>
       </div>
       
